--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
         }
 
 
-        const urlParams = new URLSearchParams();
+        const urlParams = new URLSearchParams(window.location.search);
         const clientId = urlParams.get('clientId');
+
         const redirectUri = 'scriptable:///run/Spotify';
 
         let codeVerifier = generateRandomString(128);
@@ -48,11 +49,10 @@
                 code_challenge_method: 'S256',
                 code_challenge: codeChallenge
             });
-
-            window.location.href = 'https://accounts.spotify.com/authorize?' + args;
+            // window.location.href = 'https://accounts.spotify.com/authorize?' + args;
         });
 
     } catch (e) {
-
+        console.log(e);
     }
 </Script>
