--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 code_challenge_method: 'S256',
                 code_challenge: codeChallenge
             });
-            // window.location.href = 'https://accounts.spotify.com/authorize?' + args;
+            window.location.href = 'https://accounts.spotify.com/authorize?' + args;
         });
 
     } catch (e) {
