--- a/index.html
+++ b/index.html
@@ -26,13 +26,11 @@
             return base64encode(digest);
         }
 
+        const redirectUri = 'scriptable:///run/Spotify';
 
         const urlParams = new URLSearchParams(window.location.search);
         const clientId = urlParams.get('clientId');
-
-        const redirectUri = 'scriptable:///run/Spotify';
-
-        let codeVerifier = generateRandomString(128);
+        const codeVerifier = urlParams.get('codeVerifier');;
 
         generateCodeChallenge(codeVerifier).then(codeChallenge => {
             let state = generateRandomString(16);
@@ -49,6 +47,7 @@
                 code_challenge_method: 'S256',
                 code_challenge: codeChallenge
             });
+            
             window.location.href = 'https://accounts.spotify.com/authorize?' + args;
         });
 
