--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 
         const urlParams = new URLSearchParams(window.location.search);
         const clientId = urlParams.get('clientId');
-        const codeVerifier = urlParams.get('codeVerifier');;
+        const codeVerifier = urlParams.get('codeVerifier');
+        const scope = urlParams.get('scope')
+
 
         generateCodeChallenge(codeVerifier).then(codeChallenge => {
             let state = generateRandomString(16);
-            let scope = 'user-read-private user-read-email';
-
             localStorage.setItem('code_verifier', codeVerifier);
 
             let args = new URLSearchParams({
@@ -47,7 +47,7 @@
                 code_challenge_method: 'S256',
                 code_challenge: codeChallenge
             });
-            
+
             window.location.href = 'https://accounts.spotify.com/authorize?' + args;
         });
 
